<resources>
    <string name="app_name">TextTime</string>
    <string name="app">TextTime App.</string>
    <string name="password">Password</string>
    <string name="you_name">Enter your username</string>
    <string name="digit_code">Enter 4 digit code</string>
    <string name="leave_comment">Leave a comment</string>
    <string name="read_more"><u>Read More...</u></string>
    <string name="your_pass">Create your password</string>
    <string name="write_comment">Write your comment!</string>
    <string name="create_user">Create your @username</string>
    <string name="resend_code">Resend validation code</string>
    <string name="choose_country"> Choose your country</string>
    <string name="enter_number">Enter your phone number</string>
    <string name="about_comment">You\'re about to comment!</string>
    <string name="send_sms">Send SMS with verification code</string>
    <string name="number_correct">Is your number above correct?</string>
    <string name="signup_error">Getting error with signup process</string>
    <string name="already_profile"><u>Already have an account?</u></string>
    <string name="verify_msg">Validation code was sent to this number</string>
    <string name="reached_limit">Your reached limit for resending code.</string>
    <string name="unable_resend_code">Unable to resend verification code</string>
    <string name="invalid_verify">Verification code not valid more then one time</string>
    <string name="country_err">Please select your country code and enter valid phone number</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA82N1-k-AGKJrboXsXcddIEV9UBGsginU</string>
</resources>
