<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="16dp">
        <CustomViews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_msg"
            android:textSize="18dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <CustomViews.CustomTextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:background="@android:color/transparent"
                android:textColor="@android:color/black"/>
            <CustomViews.CustomTextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginLeft="8dp"
                android:background="@android:color/transparent" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/insert_code"
            android:hint="@string/digit_code"
            android:textColorHint="@color/textColor1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor1"
            android:background="@drawable/edittext_bottom_line"
            android:textSize="28dp"
            android:focusableInTouchMode="true"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/resendVerifyCode"
        android:layout_marginTop="65dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right|center_vertical"
        android:layout_marginRight="@dimen/leftmargin"
        android:background="@android:color/transparent">
        <CustomViews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/textColor1"
            android:background="@android:color/transparent"
            android:text="@string/resend_code" />
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/sendcode"
            android:background="@android:color/transparent"
            android:layout_marginLeft="7dp"
            android:src="@mipmap/send"/>
    </LinearLayout>

</LinearLayout>